--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,6 @@ dependencies {
     compile 'com.sedmelluq:lavaplayer:1.3.17'
     compile 'net.dv8tion:JDA:3.8.3_462'
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+    compile 'com.jagrosh:jda-utilities:2.0'
     
 }
