--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,9 @@ dependencies {
     compile 'com.jagrosh:jda-utilities:2.0'
     
 }
+task copyToLib(type: Copy) {
+    into "$buildDir/libs"
+    from(configurations.compile)
+}
+
+stage.dependsOn(copyToLib)
